# ivothevampire

./: .gitignore  Animation.cpp  Animation.h  CMakeLists.txt  Config.h.in  GameProc.cpp  LICENSE  README.md  StdAfx.h  Vampire.cpp  vampire_ivo.cpp  vampire_ivo.vcproj
debug/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
lib/: README.md
src/: Animation.cpp  Animation.h  Config.h  Font.cpp  Font.h  GameProc.cpp  GameProc.h  Sprite.cpp  Sprite.h  StdAfx.cpp  Vampire.cpp  Vampire.h  resource.rc  vampire_ivo.cpp  vampire_ivo.h
